--- a/src/Smartstore/Smartstore.csproj
+++ b/src/Smartstore/Smartstore.csproj
@@ -30,20 +30,20 @@
         <PackageReference Include="AsyncKeyedLock" Version="6.2.2" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Barcoder" Version="1.1.1" />
-        <PackageReference Include="CronExpressionDescriptor" Version="2.20.0" />
-        <PackageReference Include="HtmlSanitizer" Version="8.0.645" />
+        <PackageReference Include="CronExpressionDescriptor" Version="2.21.0" />
+        <PackageReference Include="HtmlSanitizer" Version="8.0.744" />
         <PackageReference Include="Humanizer" Version="2.14.1" />
-        <PackageReference Include="MailKit" Version="4.1.0" />
+        <PackageReference Include="MailKit" Version="4.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.12" />
         <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="7.0.0" />
-        <PackageReference Include="NCrontab.Signed" Version="3.3.2" />
+        <PackageReference Include="NCrontab.Signed" Version="3.3.3" />
         <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
         <PackageReference Include="NuGet.Protocol" Version="6.7.0" />
-        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" />
-        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta15" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
+        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.0.0" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
         <PackageReference Include="System.ServiceModel.Syndication" Version="7.0.0" />
     </ItemGroup>
 
