--- a/src/Smartstore.Data/Smartstore.Data.SqlServer/Smartstore.Data.SqlServer.csproj
+++ b/src/Smartstore.Data/Smartstore.Data.SqlServer/Smartstore.Data.SqlServer.csproj
@@ -9,9 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" GeneratePathProperty="true" />
-        <None Include="$(PkgMicrosoft_EntityFrameworkCore_SqlServer)\lib\net6.0\*.dll" CopyToOutputDirectory="PreserveNewest">
+        <PackageReference Include="Azure.Identity" Version="1.10.4" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" GeneratePathProperty="true" />
+        <None Include="$(PkgMicrosoft_EntityFrameworkCore_SqlServer)\lib\net8.0\*.dll" CopyToOutputDirectory="PreserveNewest">
             <Visible>false</Visible>
         </None>
 	</ItemGroup>
