--- a/src/Smartstore/Smartstore.csproj
+++ b/src/Smartstore/Smartstore.csproj
@@ -30,21 +30,22 @@
         <PackageReference Include="AsyncKeyedLock" Version="6.2.4" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Barcoder" Version="1.1.1" />
-        <PackageReference Include="CronExpressionDescriptor" Version="2.21.0" />
+        <PackageReference Include="CronExpressionDescriptor" Version="2.32.0" />
         <PackageReference Include="HtmlSanitizer" Version="8.0.744" />
         <PackageReference Include="Humanizer" Version="2.14.1" />
-        <PackageReference Include="MailKit" Version="4.2.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.12" />
-        <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="7.0.0" />
+        <PackageReference Include="MailKit" Version="4.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
         <PackageReference Include="NCrontab.Signed" Version="3.3.3" />
         <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
         <PackageReference Include="NuGet.Protocol" Version="6.6.1" />
-        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
-        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.0.0" />
+        <PackageReference Include="PreMailer.Net" Version="2.4.0" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
+        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.0" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
-        <PackageReference Include="System.ServiceModel.Syndication" Version="7.0.0" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
+        <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
