--- a/src/Smartstore/Smartstore.csproj
+++ b/src/Smartstore/Smartstore.csproj
@@ -43,6 +43,7 @@
         <PackageReference Include="PreMailer.Net" Version="2.4.0" />
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
         <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.0" />
+        <PackageReference Include="System.IO.Hashing" Version="8.0.0" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
         <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
