--- a/src/Smartstore.Data/Smartstore.Data.MySql/Smartstore.Data.MySql.csproj
+++ b/src/Smartstore.Data/Smartstore.Data.MySql/Smartstore.Data.MySql.csproj
@@ -6,11 +6,11 @@
 
 	<ItemGroup>
         <PackageReference Include="MySqlConnector" Version="2.3.3" GeneratePathProperty="true" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" GeneratePathProperty="true" />
-        <None Include="$(PkgMySqlConnector)\lib\net7.0\*.dll" CopyToOutputDirectory="PreserveNewest">
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0-beta.2" GeneratePathProperty="true" />
+        <None Include="$(PkgMySqlConnector)\lib\net8.0\*.dll" CopyToOutputDirectory="PreserveNewest">
             <Visible>false</Visible>
         </None>
-        <None Include="$(PkgPomelo_EntityFrameworkCore_MySql)\lib\net7.0\*.dll" CopyToOutputDirectory="PreserveNewest">
+        <None Include="$(PkgPomelo_EntityFrameworkCore_MySql)\lib\net8.0\*.dll" CopyToOutputDirectory="PreserveNewest">
             <Visible>false</Visible>
         </None>
 	</ItemGroup>
