Theming: $text-muted --> $body-secondary-color

--- a/src/Smartstore.Web/Themes/Flex/theme.config
+++ b/src/Smartstore.Web/Themes/Flex/theme.config
@@ -53,7 +53,9 @@
         <Var name="body-color" type="Color">$gray-800</Var>
         <Var name="yiq-text-dark" type="Color">$gray-900</Var>
         <Var name="yiq-text-light" type="Color">#fff</Var>
-        <Var name="text-muted" type="Color">$gray-600</Var>
+        <Var name="body-secondary-color" type="Color">$gray-600</Var>
+        <Var name="body-tertiary-color" type="Color">$gray-500</Var>
+        <Var name="text-muted" type="Color">$body-secondary-color</Var>
         <Var name="link-color" type="Color">#0066c0</Var>
 
         <!-- Secondary Button -->
