Theming: $text-muted --> $body-secondary-color

--- a/src/Smartstore.Web/Themes/Flex/theme.config
+++ b/src/Smartstore.Web/Themes/Flex/theme.config
@@ -65,7 +65,7 @@
         <Var name="inverse-footer" type="Boolean">false</Var>
         <Var name="footer-bg" type="Color">$gray-100</Var>
         <Var name="footer-color" type="Color">$body-color</Var>
-        <Var name="footer-color-muted" type="Color">$text-muted</Var>
+        <Var name="footer-color-muted" type="Color">$body-secondary-color</Var>
         <Var name="footer-inverse-color" type="Color">#fff</Var>
         <Var name="footer-inverse-color-muted" type="Color">rgba(#fff, 0.5)</Var>
         <Var name="footer-social-bg" type="Color">transparent</Var>
@@ -117,7 +117,7 @@
         <Var name="menubar-bg" type="Color">transparent</Var>
         <Var name="shopbar-bg" type="Color">transparent</Var>
         <Var name="megamenu-bg" type="Color">$gray-100</Var>
-        <Var name="header-color-muted" type="Color">$text-muted</Var>
+        <Var name="header-color-muted" type="Color">$body-secondary-color</Var>
 
         <Var name="menubar-color" type="Color">$body-color</Var>
         <Var name="shopbar-color" type="Color">$body-color</Var>
