Razor runtime compilation fixes (wip)

--- a/src/Smartstore.Web/appsettings.json
+++ b/src/Smartstore.Web/appsettings.json
@@ -59,8 +59,8 @@
     // view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml).
     "EnableLocalizedViews": false,
     "EnableViewLocationCacheDuringDebug": true,
-    // Set this to false if you don't intend to edit view files during runtime.
-    // Disabling razor runtime compilation uses less resources.
+    // Set this to false if you don't intend to edit view files at runtime.
+    // Disabling Razor runtime compilation uses fewer resources.
     "EnableRazorRuntimeCompilation": true,
     "ShowCustomErrors": true,
     "EnableLegacyRoutesMapping": false,
