DataProvider: optimize table (increased timeout for long running tasks)

--- a/src/Smartstore.Web/appsettings.json
+++ b/src/Smartstore.Web/appsettings.json
@@ -64,9 +64,9 @@
     "EnableRazorRuntimeCompilation": true,
     "ShowCustomErrors": true,
     "EnableLegacyRoutesMapping": false,
-    // Increase timeout if you run into database related timeout problems during regular operations.
+    // Increase timeout (in seconds) if you run into database related timeout problems during regular operations.
     "DbCommandTimeout": 30,
-    // Increase timeout if you run into database related timeout problems during database migration.
+    // Increase timeout (in seconds) if you run into database related timeout problems during database migration.
     "DbMigrationCommandTimeout": 120,
     // Enables pooling for DbContextFactory.
     "UsePooledDbContextFactory": false,
