New app setting for MS SQL Server compatibility level

--- a/src/Smartstore.Web/appsettings.json
+++ b/src/Smartstore.Web/appsettings.json
@@ -80,8 +80,14 @@
     // accessing large columns (text, ntext, varchar(max) and nvarchar(max)). 
     // It enables the "SequentialAccess" option and uses an optimized method
     // for converting large text columns into string objects.
-    // Only applies to MS SQLServer.
+    // Only applies to MS SQL Server.
     "UseSequentialDbDataReader": false,
+    // Sets the MS SQL Server compatibility level that EF Core will use when interacting
+    // with the database. This allows configuring EF Core to work with older (or newer)
+    // versions of SQL Server. Defaults to 160 (SQL Server 2022).
+    // Allowed levels are (without the version in brackets): 
+    // null (auto), 160 (2022), 150 (2019), 140 (2017), 130 (2016), 120 (2014), 110 (2012), 100 (2008)
+    "SqlServerCompatLevel": null,
     // Storage path for media files and assets like thumbs, uploads, email attachments etc.
     // Must be either an app local relative path or a fully qualified physical path to a shared location. E.g.:
     //     - "Media" or "/Media" points to the subfolder named "Media" in your application root
