Revamped SignIn / Register page

--- a/src/Smartstore.Web/Themes/Flex/theme.config
+++ b/src/Smartstore.Web/Themes/Flex/theme.config
@@ -178,7 +178,7 @@
         <Var name="nav-tabs-active-link-color" type="Color">$gray-700</Var>
         <Var name="product-price-color" type="Color">$body-color</Var>
         <Var name="product-detail-addtocart-box-bg" type="Color">$gray-100</Var>
-        <Var name="login-box-bg" type="Color">tint-color($gray-100, 40%)</Var>
+        <Var name="register-box-bg" type="Color">tint-color($gray-100, 40%)</Var>
         <Var name="cart-footer-bg" type="Color">$gray-100</Var>
         <Var name="costep-progress-color" type="Color">$warning</Var>
         <Var name="offcanvas-cart-footer" type="Color">$success</Var>
