--- a/src/Smartstore.Build/Smartstore.Common.props
+++ b/src/Smartstore.Build/Smartstore.Common.props
@@ -9,6 +9,7 @@
         <ChecksumAlgorithm>SHA1</ChecksumAlgorithm>
 		<Configurations>Debug;Release;DebugNoRazorCompile</Configurations>
 		<NoWarn>1573;1591;1701;1702</NoWarn>
+        <LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
     <PropertyGroup>
