--- a/.github/workflows/publish-nightly.yml
+++ b/.github/workflows/publish-nightly.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
         include-prerelease: false
@@ -44,14 +44,14 @@ jobs:
       run: dotnet test Smartstore.sln -c Release --no-restore --no-build
     
     - name: Log in to the GitHub Container registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     #- name: Log in to Docker Hub
-    #  uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+    #  uses: docker/login-action@v2
     #  with:
     #    username: ${{ secrets.DOCKER_USERNAME }}
     #    password: ${{ secrets.DOCKER_PASSWORD }}
