--- a/.github/workflows/publish-nightly.yml
+++ b/.github/workflows/publish-nightly.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [debian-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
     permissions:
       contents: read
       packages: write
@@ -56,7 +56,7 @@ jobs:
     #    password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Publish and Push for Linux
-      if: matrix.os == 'debian-latest'
+      if: matrix.os == 'ubuntu-latest'
       run: | 
         dotnet publish src/Smartstore.Web/Smartstore.Web.csproj -c Release -o ./.build/release --no-restore --no-build --no-self-contained
         docker build --build-arg SOURCE=./.build/release -f NoBuild.Dockerfile -t ghcr.io/smartstore/smartstore-linux:nightly .
