--- a/src/Smartstore.Core/Smartstore.Core.csproj
+++ b/src/Smartstore.Core/Smartstore.Core.csproj
@@ -16,7 +16,10 @@
         <PackageReference Include="ExcelDataReader" Version="3.7.0" />
         <PackageReference Include="FluentFTP" Version="51.1.0" />
         <PackageReference Include="FluentMigrator" Version="6.2.0" />
-        <PackageReference Include="FluentMigrator.Runner" Version="6.2.0" />
+        <PackageReference Include="FluentMigrator.Runner.MySql" Version="6.2.0" />
+        <PackageReference Include="FluentMigrator.Runner.Postgres" Version="6.2.0" />
+        <PackageReference Include="FluentMigrator.Runner.SQLite" Version="6.2.0" />
+        <PackageReference Include="FluentMigrator.Runner.SqlServer" Version="6.2.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
         <PackageReference Include="MaxMind.Db" Version="4.1.0" />
