--- a/src/Smartstore/Smartstore.csproj
+++ b/src/Smartstore/Smartstore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\Smartstore.Build\Smartstore.Common.props" />
 
@@ -26,7 +26,7 @@
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="0.17.1" />
         <PackageReference Include="AngleSharp.Css" Version="0.17.0" />
-        <PackageReference Include="AsyncKeyedLock" Version="7.0.2" />
+        <PackageReference Include="AsyncKeyedLock" Version="7.1.1" />
         <PackageReference Include="Autofac" Version="8.1.1" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
         <PackageReference Include="Barcoder" Version="3.0.0" />
