Resolved #1142 Implement configurable Content-Security-Policy HTTP header. Replaces obsolete X-Frame-Options "SAMEORIGIN".

--- a/src/Smartstore.Web/appsettings.json
+++ b/src/Smartstore.Web/appsettings.json
@@ -152,6 +152,16 @@
       // The allowed values from X-Forwarded-Host as string array. If the array is null or empty then all hosts are allowed.
       "AllowedHosts": null
     },
+    "ContentSecurityPolicy": {
+      // "true" to apply Content Security Policy (CSP) HTTP header.
+      "Enabled": true,
+      // "true" to not not enforce CSP and to display policy violations in the browser's console. Default: false.
+      "Report": false,
+      // Sets valid parents that may embed a page (like iframe). Default: 'self'.
+      "FrameAncestors": [ "'self'" ],
+      // "true" to treat insecure URLs (HTTP) as though they have been replaced with secure URLs (HTTPS). Default: false.
+      "UpgradeInsecureRequests": false
+    },
     // If you installed the Redis module:
     // Uncomment the block below to specify connection strings for various
     // Redis based components. Keep in mind that "Default" always acts as a fallback.
