--- a/src/Smartstore.Web/appsettings.json
+++ b/src/Smartstore.Web/appsettings.json
@@ -155,7 +155,7 @@
     "ContentSecurityPolicy": {
       // "true" to apply Content Security Policy (CSP) HTTP header.
       "Enabled": true,
-      // "true" to not not enforce CSP and to display policy violations in the browser's console. Default: false.
+      // "true" to not enforce CSP and to display policy violations in the browser's console. Default: false.
       "Report": false,
       // Sets valid parents that may embed a page (like iframe). Default: 'self'.
       "FrameAncestors": [ "'self'" ],
