--- a/src/Smartstore.Core/Smartstore.Core.csproj
+++ b/src/Smartstore.Core/Smartstore.Core.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
-        <PackageReference Include="DotLiquid" Version="2.2.692" />
+        <PackageReference Include="DotLiquid" Version="2.3.0" />
         <PackageReference Include="ExcelDataReader" Version="3.7.0" />
         <PackageReference Include="FluentFTP" Version="52.0.0" />
         <PackageReference Include="FluentMigrator" Version="6.2.0" />
@@ -21,6 +21,7 @@
         <PackageReference Include="FluentMigrator.Runner.SQLite" Version="6.2.0" />
         <PackageReference Include="FluentMigrator.Runner.SqlServer" Version="6.2.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        <PackageReference Include="HtmlSanitizer" Version="8.2.871-beta" />
         <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
         <PackageReference Include="MaxMind.Db" Version="4.1.0" />
         <PackageReference Include="MaxMind.GeoIP2" Version="5.2.0" />
@@ -28,9 +29,9 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Parlot" Version="1.0.2" />
-        <PackageReference Include="Polly" Version="8.4.2" />
-        <PackageReference Include="PreMailer.Net" Version="2.4.0" />
+        <PackageReference Include="Parlot" Version="1.3.2" />
+        <PackageReference Include="Polly" Version="8.5.0" />
+        <PackageReference Include="PreMailer.Net" Version="2.6.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
         <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
