--- a/src/Smartstore/Smartstore.csproj
+++ b/src/Smartstore/Smartstore.csproj
@@ -24,23 +24,23 @@
 	</ItemGroup>-->
 	
     <ItemGroup>
-        <PackageReference Include="AngleSharp" Version="0.17.1" />
-        <PackageReference Include="AngleSharp.Css" Version="0.17.0" />
+        <PackageReference Include="AngleSharp" Version="1.2.0" />
+        <PackageReference Include="AngleSharp.Css" Version="1.0.0-beta.144" />
         <PackageReference Include="AsyncKeyedLock" Version="7.1.4" />
         <PackageReference Include="Autofac" Version="8.2.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
         <PackageReference Include="Barcoder" Version="3.0.0" />
         <PackageReference Include="CronExpressionDescriptor" Version="2.38.0" />
-        <PackageReference Include="HtmlSanitizer" Version="8.1.870" />
+        <PackageReference Include="HtmlSanitizer" Version="8.2.871-beta" />
         <PackageReference Include="Humanizer" Version="2.14.1" />
-        <PackageReference Include="MailKit" Version="4.8.0" />
+        <PackageReference Include="MailKit" Version="4.9.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.0" />
         <PackageReference Include="NCrontab.Signed" Version="3.3.3" />
         <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.3" />
         <PackageReference Include="NuGet.Protocol" Version="6.12.1" />
-        <PackageReference Include="PreMailer.Net" Version="2.4.0" />
+        <PackageReference Include="PreMailer.Net" Version="2.6.0" />
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
         <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.5" />
         <PackageReference Include="System.IO.Hashing" Version="9.0.0" />
