Updated useragent.yml (new bots)

--- a/src/Smartstore.Core/Platform/Web/UserAgent/useragent.yml
+++ b/src/Smartstore.Core/Platform/Web/UserAgent/useragent.yml
@@ -297,17 +297,18 @@ bots:
   - match: GoogleOther
   - match: Google-Extended
   - match: Google-InspectionTool
+  - match: Google-CloudVertexBot
   - match: StartmeBot
     name: $1
 
-  - match: AdsBot-Google-Mobile
-    name: Google AdsBot Mobile
-
-  - match: adsbot-google
+  - match: AdsBot-Google
     name: Google AdsBot
 
-  - match: feedfetcher-google
+  - match: FeedFetcher-Google
     name: Google FeedFetcher
+
+  - match: GoogleProducer
+    name: Google Publisher Center
 
   - match: facebookexternalhit
   - match: FacebookBot
@@ -317,7 +318,7 @@ bots:
   - match: AhrefsBot
     name: $1
 
-  - match: Owler+
+  - match: Owler
     name: OWLer - Open Web Crawler
   
   # Common tools, readers & apps
@@ -368,6 +369,9 @@ bots:
   - match: Newslitbot
   - match: Feedly
     name: $1
+
+  - match: OAI-SearchBot
+    name: OpenAI Search Bot
 
   - match: PerplexityBot/
     name: Perplexity Bot  
@@ -428,8 +432,11 @@ bots:
   - match: CRAZYWEBCRAWLER
     name: Crazy Webcrawler
 
-  - match: google-read-aloud
+  - match: Google-Read-Aloud
     name: Google ReadAloud
+
+  - match: Google-Site-Verification
+    name: Google Site Verifier
 
   - match: google-Safety
     name: Google Safety
