--- a/src/Smartstore.Core/Platform/Web/UserAgent/useragent.yml
+++ b/src/Smartstore.Core/Platform/Web/UserAgent/useragent.yml
@@ -352,6 +352,7 @@ bots:
   - match: Audisto Crawler
   - match: Monsidobot
   - match: GroupMeBot
+  - match: DataForSeoBot
   - match: MetaInspector
   - match: Iframely
   - match: Synapse
