--- a/src/Smartstore.Build/Smartstore.Build/Smartstore.Build.csproj
+++ b/src/Smartstore.Build/Smartstore.Build/Smartstore.Build.csproj
@@ -2,17 +2,18 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<RootNamespace></RootNamespace>
-		<NoWarn>CS0649;CS0169</NoWarn>
+		<NoWarn>CS0649;CS0169;CA1050;CA1822;CA2211;IDE1006</NoWarn>
 		<NukeRootDirectory>..\..\..</NukeRootDirectory>
 		<NukeScriptDirectory>..\..\..</NukeScriptDirectory>
 		<NukeTelemetryVersion>1</NukeTelemetryVersion>
+		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Nuke.Common" Version="6.2.1" />
-		<PackageDownload Include="GitVersion.Tool" Version="[5.8.0]" />
+		<PackageReference Include="Nuke.Common" Version="9.0.4" />
+		<PackageDownload Include="GitVersion.Tool" Version="[6.1.0]" />
 	</ItemGroup>
 
 </Project>
