--- a/src/Smartstore.Build/Smartstore.Build/Smartstore.Build.csproj
+++ b/src/Smartstore.Build/Smartstore.Build/Smartstore.Build.csproj
@@ -8,6 +8,7 @@
 		<NukeRootDirectory>..\..\..</NukeRootDirectory>
 		<NukeScriptDirectory>..\..\..</NukeScriptDirectory>
 		<NukeTelemetryVersion>1</NukeTelemetryVersion>
+		<NukeExcludeDirectoryBuild>True</NukeExcludeDirectoryBuild>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
