Prevent BuildHost folders from being copied into the project

--- a/src/Smartstore.Build/Smartstore.Razor.props
+++ b/src/Smartstore.Build/Smartstore.Razor.props
@@ -6,6 +6,9 @@
 		<MvcRazorCompileOnPublish>true</MvcRazorCompileOnPublish>
 		<RazorCompileOnBuild>true</RazorCompileOnBuild>
 		<RazorCompileOnPublish>true</RazorCompileOnPublish>
+
+        <!-- Suppresses the generation of the BuildHost processes -->
+        <UseRazorBuildServer>false</UseRazorBuildServer>
 	
 		<!-- TODO: (core) Think about Razor precompilation strategy and implement decently -->
 		<!--
