Build should not compress static files (.br and .gz)

--- a/src/Smartstore.Build/Smartstore.Razor.props
+++ b/src/Smartstore.Build/Smartstore.Razor.props
@@ -29,4 +29,11 @@
 		<RazorCompileOnBuild>true</RazorCompileOnBuild>
 	</PropertyGroup>
 
+    <PropertyGroup>
+        <CompressionEnabled>false</CompressionEnabled>
+        <StaticWebAssetsEnabled>false</StaticWebAssetsEnabled>
+        <StaticWebAssetFingerprintingEnabled>false</StaticWebAssetFingerprintingEnabled>
+        <DisableBuildCompression>true</DisableBuildCompression>
+    </PropertyGroup>
+
 </Project>
