InstantSearch input revamp

--- a/src/Smartstore.Web/Themes/Flex/theme.config
+++ b/src/Smartstore.Web/Themes/Flex/theme.config
@@ -136,7 +136,9 @@
 
         <!-- Search -->
         <Var name="searchbox-pill" type="Boolean">true</Var>
-        <Var name="searchbox-shadow" type="Boolean">true</Var>
+        <Var name="searchbox-shadow" type="Boolean">false</Var>
+        <Var name="searchbox-outline-width" type="String">2px</Var>
+        <Var name="searchbox-outline-color" type="Color">$warning</Var>
         <Var name="searchbox-bg-1" type="Color">#fff</Var>
         <Var name="searchbox-bg-2" type="Color">#fff</Var>
         <Var name="searchbox-bg-mobile" type="Color">$light</Var>
