InstantSearch input revamp for FlexBlue & FlexBlack

--- a/src/Smartstore.Web/Themes/FlexBlack/theme.config
+++ b/src/Smartstore.Web/Themes/FlexBlack/theme.config
@@ -40,9 +40,12 @@
         <Var name="offcanvas-cart-footer" type="Color">#424242</Var>
 
         <!-- Search -->
+        <Var name="searchbox-shadow" type="Boolean">true</Var>
         <Var name="searchbox-bg-1" type="Color">$gray-700</Var>
         <Var name="searchbox-color-1" type="Color">#fff</Var>
         <Var name="searchbox-bg-2" type="Color">#f5f5f5</Var>
+        <Var name="searchbox-border-1" type="Color">$searchbox-bg-1</Var>
+        <Var name="searchbox-border-2" type="Color">$searchbox-bg-2</Var>
         <Var name="searchbox-bg-mobile" type="Color">$searchbox-bg-1</Var>
         <Var name="searchbox-border-mobile" type="Color">$searchbox-border-1</Var>
     </Vars>
