--- a/src/Smartstore.Web/Themes/FlexBlue/theme.config
+++ b/src/Smartstore.Web/Themes/FlexBlue/theme.config
@@ -21,9 +21,10 @@
         <Var name="card-cap-bg" type="Color">#e3f2fd</Var>
 
         <!-- Search -->
+        <Var name="searchbox-shadow" type="Boolean">true</Var>
         <Var name="searchbox-bg-1" type="Color">mix($blue, #fff)</Var>
         <Var name="searchbox-color-1" type="Color">mix($blue, #000, 30%)</Var>
-        <!--<Var name="searchbox-border-1" type="Color">rgba(255,255,255, 0)</Var>
-        <Var name="searchbox-border-2" type="Color">rgba(255,255,255, 0)</Var>-->
+        <Var name="searchbox-border-1" type="Color">$searchbox-bg-1</Var>
+        <Var name="searchbox-border-2" type="Color">$searchbox-bg-2</Var>
     </Vars>
 </Theme>
