--- a/src/Smartstore.Build/Smartstore.Build/Smartstore.Build.csproj
+++ b/src/Smartstore.Build/Smartstore.Build/Smartstore.Build.csproj
@@ -13,6 +13,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.14.8" />
 		<PackageReference Include="Nuke.Common" Version="9.0.4" />
 		<PackageDownload Include="GitVersion.Tool" Version="[6.1.0]" />
 	</ItemGroup>
