--- a/src/Smartstore.Web/Smartstore.Web.csproj
+++ b/src/Smartstore.Web/Smartstore.Web.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Azure.Core" Version="1.47.3" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.14.8" />
 		<PackageReference Include="Microsoft.ClearScript.V8" Version="7.5.0" />
 		<PackageReference Include="Microsoft.ClearScript.V8.Native.linux-x64" Version="7.5.0" />
 		<PackageReference Include="Microsoft.ClearScript.V8.Native.osx-x64" Version="7.5.0" />
