--- a/src/Smartstore/Smartstore.csproj
+++ b/src/Smartstore/Smartstore.csproj
@@ -46,6 +46,7 @@
         <PackageReference Include="System.IO.Hashing" Version="9.0.8" />
         <PackageReference Include="System.Linq.Async" Version="6.0.3" />
         <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.7" />
+        <PackageReference Include="System.Private.Uri" Version="4.3.2" />
         <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.8" />
     </ItemGroup>
 
